--- a/docs/site/css/bootstrap-custom.css
+++ b/docs/site/css/bootstrap-custom.css
@@ -2943,7 +2943,9 @@ textarea.input-group-sm>.form-control, textarea.input-group-sm>.input-group-addo
     float: left;
     padding: 12px 15px;
     font-size: 19px;
-    line-height: 21px;
+    line-height: 26px;
+    display: flex;
+    align-items: center;
 }
 .navbar-brand:hover, .navbar-brand:focus {
     text-decoration: none;
