Refactor a little of the documentation

--- a/docs/cinder/css/base.css
+++ b/docs/cinder/css/base.css
@@ -52,6 +52,8 @@ div.source-links {
     padding-top:    10px;
     padding-bottom: 10px;
     border-radius: 5px;
+    height: calc(100vh - 100px);
+    overflow: auto;
 }
 
 /* All levels of nav */
