--- a/docs/site/css/base.css
+++ b/docs/site/css/base.css
@@ -121,6 +121,16 @@ div.source-links {
 
 /* Added to support >2 level nav in drop down */
 
+.dropdown-menu li {
+    padding: 0;
+    margin: 0;
+}
+
+.dropdown-menu li a {
+    padding: 5px 15px;
+    margin: 0;
+}
+
 .dropdown-submenu {
     position: relative;
 }
